[metadata]
name = sm-blink
version = 0.0.1
author = Tzu-Yu Lee
author_email = leejuyuu@gmail.com
description = Single-molecule fluorescence tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/leejuyuu/blink
project_urls =
    Bug Tracker = https://gitlab.com/leejuyuu/blink/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires = 
    h5py
    lifelines
    matplotlib
    numpy
    odfpy
    openpyxl
    pandas
    pyqtgraph
    PySide6
    pyswarms
    scikit-image
    scipy
    strictyaml
    seaborn
    tqdm
    xarray

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        blink = entry:entry

[flake8]
max-line-length = 88
extend-ignore = E203
